@@ -1,6 +1,7 @@
 ver 0.19.20 (not yet released)
 * decoder
   - ffmpeg: ignore empty packets
+  - pcm: fix corruption bug with partial frames (after short read)
   - sidplay: fix playback speed with libsidplayfp
 * output
   - winmm: fix 8 bit playback
